# Polls_site_django

./: README.md  pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py
mysite/polls/: urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
